static/css/main.css
/* ... */
.box-shadow-light-spread {
    box-shadow: 0 0 20px 0 rgb(216 216 216 / 50%);
    -webkit-box-shadow: 0 0 20px 0 rgb(216 216 216 / 50%);
}

.dotted-line {
    border-bottom: 2px dashed var(--grey);
    max-width: 90%;
    margin-right: auto;
    margin-left: auto;
}

.mt--1 {
    margin-top: -10px;
}

/* ---------------------
    Navbar
--------------------- */

.navbar {
    background-color: var(--white);
    padding: .2rem;
}

#navbar {
    z-index: 1;
}

.dropdown-menu {
    max-height: 400px;
    overflow-x: hidden;
}

.mobile-search-bar {
    border-top: 1px solid var(--grey);
    background-color: var(--grey);
    padding-top: .3rem;
    padding-bottom: .3rem;
}

/* 
ids necessary in selectors to override 
bootstrap width on search bar
*/
#navbar .responsive-search-bar,
#mobile-search .responsive-search-bar {
    width: 100%;
    max-width: 500px;
}

.right-nav {
    margin-top: 0.3rem;
}

.dropdown-header {
    font-size: 1rem;
    color: var(--darkgrey);
}

.dropdown-item,
.dropdown-item > i {
    transition: all ease-in-out .4s;
}

a.dropdown-item:hover,
a.dropdown-item:hover > i {
    color: var(--orange);
}

/* --------------------- 
    Navbar icons
--------------------- */
.navbar-icon {
    font-size: 1.5rem;
}

.create-btn-icon {
    font-size: 1.5rem;
    vertical-align: bottom;
}

.navbar-avatar {
    width: 38px;
    height: 38px;
    background-size: cover;
    border-radius: 50%;
    margin-left: .2rem;
}

#navbar .fa-plus.navbar-icon {
    color: var(--orange);
    transition: all ease-in-out .4s;
}

#navbar .fa-plus.navbar-icon:hover {
    color: var(--blue);
}

.dropdown-icon {
    font-size: 1.5rem;
    vertical-align: sub;
    color: var(--darkgrey);
    width: 50px;
    text-align: center;
}

/* ---------------------
    Navbar notifications
--------------------- */

.notification-num {
    width: 22px;
    height: 22px;
    background-color: var(--orange);
    border-radius: 50%;
    color: white;
    display: inline-block;
    font-size: small;
    position: absolute;
    left: 34px;
    top: -1px;
    text-align: center;
}

/*
Positioning of notification in navbar slightly
different to in dropdown menu
*/
#notifications .notification-num {
    left: 20px;
}

/*
Code for ringing bell animation by Fazlur Rahman
https://codepen.io/fazlurr/pen/xeXpqx
*/
#ringing-bell {
    color: var(--blue);
    -webkit-animation: ring 4s .7s ease-in-out;
    -webkit-transform-origin: 50% 4px;
    -moz-animation: ring 4s .7s ease-in-out;
    -moz-transform-origin: 50% 4px;
    animation: ring 4s .7s ease-in-out;
    transform-origin: 50% 4px;
}

@-webkit-keyframes ring {
    0% { -webkit-transform: rotateZ(0); }
    1% { -webkit-transform: rotateZ(30deg); }
    3% { -webkit-transform: rotateZ(-28deg); }
    5% { -webkit-transform: rotateZ(34deg); }
    7% { -webkit-transform: rotateZ(-32deg); }
    9% { -webkit-transform: rotateZ(30deg); }
    11% { -webkit-transform: rotateZ(-28deg); }
    13% { -webkit-transform: rotateZ(26deg); }
    15% { -webkit-transform: rotateZ(-24deg); }
    17% { -webkit-transform: rotateZ(22deg); }
    19% { -webkit-transform: rotateZ(-20deg); }
    21% { -webkit-transform: rotateZ(18deg); }
    23% { -webkit-transform: rotateZ(-16deg); }
    25% { -webkit-transform: rotateZ(14deg); }
    27% { -webkit-transform: rotateZ(-12deg); }
    29% { -webkit-transform: rotateZ(10deg); }
    31% { -webkit-transform: rotateZ(-8deg); }
    33% { -webkit-transform: rotateZ(6deg); }
    35% { -webkit-transform: rotateZ(-4deg); }
    37% { -webkit-transform: rotateZ(2deg); }
    39% { -webkit-transform: rotateZ(-1deg); }
    41% { -webkit-transform: rotateZ(1deg); }
    43% { -webkit-transform: rotateZ(0); }
    100% { -webkit-transform: rotateZ(0); }
}

@-moz-keyframes ring {
    0% { -moz-transform: rotate(0); }
    1% { -moz-transform: rotate(30deg); }
    3% { -moz-transform: rotate(-28deg); }
    5% { -moz-transform: rotate(34deg); }
    7% { -moz-transform: rotate(-32deg); }
    9% { -moz-transform: rotate(30deg); }
    11% { -moz-transform: rotate(-28deg); }
    13% { -moz-transform: rotate(26deg); }
    15% { -moz-transform: rotate(-24deg); }
    17% { -moz-transform: rotate(22deg); }
    19% { -moz-transform: rotate(-20deg); }
    21% { -moz-transform: rotate(18deg); }
    23% { -moz-transform: rotate(-16deg); }
    25% { -moz-transform: rotate(14deg); }
    27% { -moz-transform: rotate(-12deg); }
    29% { -moz-transform: rotate(10deg); }
    31% { -moz-transform: rotate(-8deg); }
    33% { -moz-transform: rotate(6deg); }
    35% { -moz-transform: rotate(-4deg); }
    37% { -moz-transform: rotate(2deg); }
    39% { -moz-transform: rotate(-1deg); }
    41% { -moz-transform: rotate(1deg); }
    43% { -moz-transform: rotate(0); }
    100% { -moz-transform: rotate(0); }
}

@keyframes ring {
    0% { transform: rotate(0); }
    1% { transform: rotate(30deg); }
    3% { transform: rotate(-28deg); }
    5% { transform: rotate(34deg); }
    7% { transform: rotate(-32deg); }
    9% { transform: rotate(30deg); }
    11% { transform: rotate(-28deg); }
    13% { transform: rotate(26deg); }
    15% { transform: rotate(-24deg); }
    17% { transform: rotate(22deg); }
    19% { transform: rotate(-20deg); }
    21% { transform: rotate(18deg); }
    23% { transform: rotate(-16deg); }
    25% { transform: rotate(14deg); }
    27% { transform: rotate(-12deg); }
    29% { transform: rotate(10deg); }
    31% { transform: rotate(-8deg); }
    33% { transform: rotate(6deg); }
    35% { transform: rotate(-4deg); }
    37% { transform: rotate(2deg); }
    39% { transform: rotate(-1deg); }
    41% { transform: rotate(1deg); }
    43% { transform: rotate(0); }
    100% { transform: rotate(0); }
}
/* end code by Fazlur Rahman */

/* ---------------------
    Footer
--------------------- */

#footer {
    background: var(--navy);
    color: var(--white);
    padding: 1rem;
}

#footer ul {
    list-style-type: none;
    padding: 0;
}
/* ... */

